--- a/socketproxy/pom.xml
+++ b/socketproxy/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.yghxj</groupId>
     <artifactId>socket</artifactId>
-    <version>${project.release.version}</version>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>socketproxy</artifactId>
   <name>socketproxy</name>
