--- a/socketproxy/pom.xml
+++ b/socketproxy/pom.xml
@@ -13,6 +13,33 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>com.ygxhj.sockeyproxy.ClientServer</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>  
+			    <artifactId>maven-antrun-plugin</artifactId>  
+			</plugin>
+		    <plugin>  
+		        <artifactId>maven-clean-plugin</artifactId>  
+		        <configuration>  
+		            <verbose>true</verbose>  
+		        </configuration>  
+		    </plugin>  
+		</plugins>
+	</build>
+	
   <dependencies>
     <dependency>
 		<groupId>com.yghxj</groupId>
