--- a/transport/pom.xml
+++ b/transport/pom.xml
@@ -43,5 +43,9 @@
 		<groupId>com.yghxj</groupId>
 		<artifactId>common</artifactId>
 	</dependency>
+	<dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	</dependency>
   </dependencies>
 </project>
